@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp4.ex3.code {
    class be.isims.ihm.dp.tp4.ex3.code.Calculatrice {
        {static} + operations : String[]
        {static} + operation()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex3.code {
    class be.isims.ihm.dp.tp4.ex3.code.CalculatriceFrm {
        - calcul : JTextArea
        - resultat : JTextArea
        + CalculatriceFrm()
        + ajoutCalcul()
        + getCalcul()
        + getCalculatrice()
        + getResultat()
        + setCalcul()
        + setResultat()
        - getPanel()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex3.code {
    class be.isims.ihm.dp.tp4.ex3.code.CalculatriceObserveur {
        + CalculatriceObserveur()
        + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex3.code {
    class be.isims.ihm.dp.tp4.ex3.code.CalculatriceTest {
        {static} + main()
    }
  }
  

  be.isims.ihm.dp.tp4.ex3.code.CalculatriceFrm -up-|> javax.swing.JFrame
  be.isims.ihm.dp.tp4.ex3.code.CalculatriceFrm o-- be.isims.ihm.dp.tp4.ex3.code.Calculatrice : calculatrice
  be.isims.ihm.dp.tp4.ex3.code.CalculatriceObserveur o-- be.isims.ihm.dp.tp4.ex3.code.CalculatriceFrm : fenetre


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
